--- a/src/app/core/crud/crud.component.html
+++ b/src/app/core/crud/crud.component.html
@@ -1,24 +1,89 @@
+<p-card header="Modulo Usuarios">
 @if(error()){
 <div style="color:brown" class="error">
   error:
   {{error()}}
 </div>
 }
+<p-button icon="pi pi-plus" [rounded]="true" (click)="onAdd()"/>
 
-
-<button (click)="onAdd()">+</button>
 <div>
 @for(user of usuariosResource.value()?.data;track user.id){
   <div>*
     {{user.id}}
     {{user.name}}
+    <button (click)="onEliminar(user.id)">🗑️</button>
+    <button (click)="onEditar(user)">✏️</button>
   </div>
 }
 
 </div>
 @if(modal()){
 <div class="modal-overlay">
-  <button (click)="onClose()">x</button>
-  <app-form-crud></app-form-crud>
+  @if(formVisible){
+    <app-form-crud [data]="itemSelect()" (salir)="onClose()" ></app-form-crud>
+  }
+  @if(dialogVisible){
+    <app-dialog texto="Esta seguro de borrar el elemento" 
+    (confirm)="confirmacion($event)" ></app-dialog>
+  }
 </div>
 }
+<div class="container px-4 mt-10 mb-10 max-w-90">
+<p-dataview #dv [value]="usuariosResource.value()?.data">
+    <ng-template #list let-items>
+        <div class="grid grid-cols-12 gap-4 grid-nogutter">
+            <div class="col-span-12">
+              @for(item of items; track item.id){
+                <div class="flex flex-col sm:items-center p-6 gap-4 border border-surface-200 dark:border-surface-700 mt-5">
+                    <div class="md:w-40 relative">
+                        <img
+                            class="block xl:block mx-auto rounded-border w-full"
+                            [src]="'https://media.tenor.com/9o7iRrZiUakAAAAe/peepo-business.png' + item.image"
+                            [alt]="item.name"
+                        />
+                        <p-tag
+                            [value]="item.inventoryStatus"
+                            [severity]="'danger'"
+                            class="absolute dark:!bg-surface-900"
+                            [style.left.px]="4"
+                            [style.top.px]="4"
+                        />
+                    </div>
+                    <div class="flex flex-col md:flex-row justify-between md:items-center flex-1 gap-6">
+                        <div class="flex flex-row md:flex-col justify-between items-start gap-2">
+                            <div>
+                                <div class="text-lg font-medium text-surface-900 dark:text-surface-0 mt-2">{{ item.name }}</div>
+                            </div>
+                            <div class="bg-surface-100 dark:bg-surface-700 p-1" style="border-radius: 30px">
+                                <div
+                                    class="bg-surface-0 dark:bg-surface-900 flex items-center gap-2 justify-center py-1 px-2"
+                                    style="border-radius: 30px; box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.04), 0px 1px 2px 0px rgba(0, 0, 0, 0.06)"
+                                >
+                                    <span class="text-surface-900 dark:text-surface-0 font-medium text-sm">{{
+                                        item.rating
+                                    }}</span>
+                                    <i class="pi pi-star-fill text-yellow-500"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-col md:items-end gap-8">
+                            <span class="text-xl font-semibold text-surface-900 dark:text-surface-0">{{
+                                item.email
+                            }}</span>
+                            <div class="flex flex-row-reverse md:flex-row gap-2">
+                                <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" [raised]="true" severity="success" (click)="onEditar(item)" />
+                                <p-button icon="pi pi-times" [rounded]="true" [text]="true" (click)="confirm2($event, item.id)" severity="danger" [outlined]="true" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              }
+                <p-toast />
+                <p-confirmdialog />
+            </div>
+        </div>
+    </ng-template>
+</p-dataview>
+</div>
+</p-card>
