--- a/src/app/core/crud/form-crud/form-crud.component.html
+++ b/src/app/core/crud/form-crud/form-crud.component.html
@@ -1,28 +1,35 @@
-<div>
+<p-panel header="Formulario de datos" class="min-w-80">
+  <ng-template #icons>
+    <p-button icon="pi pi-times" severity="secondary" rounded text (click) = "onSalir()" />
+  </ng-template>
   <div class="color:red">
-    {{error()}}
+     {{error()}}
   </div>
   <form action="" [formGroup]="datosFormGroup" (submit)="enviar()" >
-    <div>
-      <label for="name">Nombre</label>
-      <input formControlName="name" type="text" name="name" placeholder="Nombre" id="name">
+    <div class="mt-2">
+      <p-floatlabel variant="on">
+          <input class="min-w-full mb-3" id="name" [invalid]="hasError('name')" autocomplete="off" pInputText formControlName="name" type="text" name="name" />
+          <label for="name">Nombre</label>
+      </p-floatlabel>
       @if(hasError('name')){
-        <div>
+        <p-message severity="error">
           {{getErrorMessage('name')}}
-        </div>
+        </p-message>
       }
     </div>
-    <div>
-      <label for="email">Email</label>
-      <input  formControlName="email" type="email" name="email" placeholder="Email" id="email">
+    <div class="mt-3">
+      <p-floatlabel variant="on">
+          <input class="min-w-full mb-3" id="email" [invalid]="hasError('email')" autocomplete="off" pInputText formControlName="email" type="text" name="name"/>
+          <label for="email">Email</label>
+      </p-floatlabel>
       @if(hasError('email')){
-        <div>
+        <p-message severity="error">
           {{getErrorMessage('email')}}
-        </div>
+        </p-message>
       }
     </div>
-    <div>
-      <button [disabled]="datosFormGroup.invalid" (click)="guardar()">Guardar</button>
+    <div class="max-w-90 mt-3 items-end">
+      <p-button [disabled]="datosFormGroup.invalid" (click)="guardar()">Guardar</p-button>
     </div>
   </form>
-</div>
+</p-panel>
