--- a/src/app/core/crud/crud.component.html
+++ b/src/app/core/crud/crud.component.html
@@ -73,7 +73,7 @@
                             }}</span>
                             <div class="flex flex-row-reverse md:flex-row gap-2">
                                 <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" [raised]="true" severity="success" (click)="onEditar(item)" />
-                                <p-button icon="pi pi-times" [rounded]="true" [text]="true" (click)="confirm2($event, item.id)" severity="danger" [outlined]="true" />
+                                <p-button icon="pi pi-trash" [rounded]="true" [text]="true" (click)="confirm2($event, item.id)" severity="danger" [outlined]="true" />
                             </div>
                         </div>
                     </div>
