--- a/src/app/core/crud/form-crud/form-crud.component.html
+++ b/src/app/core/crud/form-crud/form-crud.component.html
@@ -17,7 +17,7 @@
         </p-message>
       }
     </div>
-    <div class="mt-3">
+    <div class="mt-3">  
       <p-floatlabel variant="on">
           <input class="min-w-full mb-3" id="email" [invalid]="hasError('email')" autocomplete="off" pInputText formControlName="email" type="text" name="name"/>
           <label for="email">Email</label>
@@ -28,7 +28,8 @@
         </p-message>
       }
     </div>
-    <div class="max-w-90 mt-3 items-end">
+    <div class="flex justify-end gap-2 max-w-90 mt-3 items-end">
+      <p-button label="Cancelar" variant="outlined" severity="secondary" (click)="onSalir()"/>
       <p-button [disabled]="datosFormGroup.invalid" (click)="guardar()">Guardar</p-button>
     </div>
   </form>
